@@ -444,6 +444,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added iiprop=parsedcomment to prop=imageinfo, similar to prop=revisions
 * Added rvparse to parse revisions. For performance reasons if this option is 
   used, rvlimit is enforced to 1.
+* If a action=parse request provides an oldid that is actually the current revision
+  id, try the parser cache, and save it to it if necessary
 
 === Languages updated in 1.17 ===
 
